--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,56 @@
 absl-py==0.6.1
+asn1crypto==0.24.0
 astor==0.7.1
+bcrypt==3.1.5
+certifi==2018.11.29
+cffi==1.11.5
+chainer==5.1.0
+chainercv==0.11.0
+chardet==3.0.4
+cloudpickle==0.6.1
+cryptography==2.4.2
+cycler==0.10.0
 Cython==0.29.2
+dask==1.0.0
+decorator==4.3.0
+filelock==3.0.10
 gast==0.2.0
+gdown==3.6.4
 grpcio==1.17.1
 h5py==2.9.0
+idna==2.8
 Keras-Applications==1.0.6
 Keras-Preprocessing==1.0.5
+kiwisolver==1.0.1
 Markdown==3.0.1
+matplotlib==3.0.2
+networkx==2.2
 numpy==1.15.4
+pandas==0.23.4
+paramiko==2.4.2
 Pillow==5.3.0
 protobuf==3.6.1
+pyasn1==0.4.5
 pycocotools==2.0.0
+pycparser==2.19
+PyNaCl==1.3.0
+pyparsing==2.3.0
+python-dateutil==2.7.5
+pytz==2018.7
+PyWavelets==1.0.1
+PyYAML==3.13
+requests==2.21.0
+scikit-image==0.14.1
+scikit-learn==0.20.2
 scipy==1.2.0
+scp==0.13.0
 six==1.12.0
 tensorboard==1.12.1
 tensorflow==1.12.0
 termcolor==1.1.0
+toolz==0.9.0
 torch==1.0.0
 torchvision==0.2.1
+tqdm==4.28.1
+urllib3==1.24.1
 Werkzeug==0.14.1
